<resources>
    <string name="app_name">ETHERNOM BLE TRACKER</string>
    <string name="update">Update</string>
    <string name="hello_world_0">hello world 0</string>
    <string name="channel_name">Simple Alarms</string>
    <string name="tracker">Tracker</string>
    <string name="registered_device">Registered device:</string>
    <string name="add_device">Add device</string>
    <string name="ethname">ETH!SOPHak</string>
    <string name="serial_number">SN: 1.2.b0</string>

    <string name="CLIENT_CHARACTERISTIC_CONFIG">19490016-5537-4f5e-99ca-290f4fbff142</string>
    <string name="ok">OK</string>
    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">Location permission request</string>
    <string name="name">Device name</string>
    <string name="macAddress">Mac Address</string>
    <string name="uuid">UUID</string>
    <string name="lb_device_name">Device Name:</string>
    <string name="lb_uuid">UUID:</string>
    <string name="lb_mac_address">Mac Address:</string>
    <string name="lb_register">Register Device</string>
    <string name="lb_find">Find</string>
    <string name="start_scan">Start Scan</string>
    <string name="mac_address">Mac Address</string>
    <string name="progressbar_dialog_txt">Loading</string>
    <string name="lb_not_active">Not Active</string>
    <string name="lb_active">Active</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connected">Active</string>
    <string name="disconnected">InActive</string>
    <string name="scanning">Scanning...</string>
    <string name="connecting">Connecting...</string>
    <string name="text_ringtone">Device Disconnected</string>
    <string name="ring">Ring...</string>
    <string name="stop">Acknowledge</string>
    <string name="scan">Scan Device</string>
    <string name="home">Ethernom Tracker</string>
    <string name="Connection">Connection Device</string>
    <string name="register">Register Device</string>
    <string name="bluetoothNotSupported">Bluetooth Not Supported</string>
    <string name="notify">Notify</string>
    <string name="notificationsNotEnabled">Notification not Enable</string>
    <string name="notificationsEnabled">Notification Enabled</string>
    <string name="status_errorWhenConnecting">Error</string>
    <string name="connection_status">Connection Status</string>
    <string name="status_bluetooth_connected">Bluetooth Connected</string>
    <string name="status_confirming">Confirmning...</string>
    <string name="Connection_Cancelled">Connection Cancelled</string>
    <string name="Connection_Accept">Connection Accepted</string>
    <string name="Ringing">App Ringing</string>
    <string name="Device_Ringing">You rang your phone from Ethernom Device: </string>
    <string name="no_registered_device">No Registered Device...</string>
    <string name="home_screen_title">Home</string>
    <string name="EthernomTitle">Ethernom, Inc.</string>
    <string name="ble_scanning">Searching for nearby devices...</string>
    <string name="lb_title"><b>Found Ethernom Devices:</b></string>
    <string name="lb_delete_device">Delete Device</string>
    <string name="lvstatus">Active</string>
    <string name="Device_Disconnected">Ethernom device: </string>
    <string name="version">Version: </string>
    <string name="qm">\?</string>
    <string name="back">Back</string>
    <string name="Device">Device</string>
    <string name="authentication">Authentication</string>
    <string name="plush">+</string>
    <string name="message">Message</string>
    <string name="configuration">Configuration:</string>
    <string name="settings">Settings</string>
    <string name="pin_lenght">PIN Length:</string>
    <string name="digit_number">2 Digits</string>
    <string name="config_description">Cofigure PIN lenght from these options.</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="location_permission">Location permission</string>
    <string name="pin_length">PIN Length</string>
    <string name="two_digits">2 Digits</string>
    <string name="four_digits">4 Digits</string>
    <string name="six_digits">6 Digits</string>
    <string name="delete_device">Delete device</string>
    <string name="copyright">Copyright © 2020 Ethernom, Inc.</string>
    <string name="all_right">All Rights Reserved</string>
    <string name="terms_of_service">Terms Of Serivce</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_available">Updates available</string>
    <string name="update_available_message">To update your device, please use Ethernom Device Manager.</string>
    <string name="disconnect">Disconnect</string>
    <string name="dont_update">Don\'t update</string>
    <string name="foreground_rang">You rang your phone from</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="set_up_permission_location">Let\' set up location permission</string>
    <string name="set_location_to_always">Set location to \'always\'</string>


    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="enter">Enter</string>
    <string name="warning">Warning</string>
    <string name="bluetooth_on_warning_message">Turn On Bluetooth to allow \"Ethernom Tracker\" to connect to bluetooth accessories.</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_device_register">No Device Registered</string>
    <string name="please_select_to_register">Please select to register</string>
    <string name="app_version">version: 1.0.1</string>
    <string name="turn_one_blue">Turn on bluetooth</string>
    <string name="turn_one_blue_message">This is needed to ring your Ethernom BLE Tracker. Please check your Bluetooth settings.</string>
    <string name="turn_on_location">Location Access Needed</string>
    <string name="turn_on_location_message">For Ethernom BLE Tracker to accurately locate your things and connect to your device, please select Allow all the time in Location Permissions.</string>
    <string name="before_activating_you_app">Before activating you App</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable">ENABLE</string>
    <string name="turn_on_bt">Turn on Bluetooth</string>
    <string name="turn_on_bt_des">App needs Bluetooth to activate your device and find your things. Please go to Settings and turn on Bluetooth.</string>
    <string name="location">Location</string>
    <string name="turn_on_lc">Allow App to access to your location</string>
    <string name="turn_on_lc_des">For App to accurately locate your things and connect to your device, please select <b>Allow all the time</b> in Location Permission.</string>
    <string name="next">Next</string>

</resources>
