<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_white"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_available"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_description"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_available_message"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:alpha="0.4"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:weightSum="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/disconnect"
            android:id="@+id/button_disconnect"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:layout_height="45dp" />
        <View
            android:layout_marginTop="1dp"
            android:layout_width="1dp"
            android:alpha="0.4"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="1dp"
            android:layout_height="44dp"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/dont_update"
            android:layout_weight="5"
            android:id="@+id/button_dont_update"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:layout_height="45dp" />
        <View
            android:layout_marginTop="1dp"
            android:layout_width="1dp"
            android:alpha="0.4"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="1dp"
            android:layout_height="44dp"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/update"
            android:layout_weight="5"
            android:id="@+id/button_update"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:layout_height="45dp" />

    </LinearLayout>

</LinearLayout>