<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ethernom.helloworld.screens.BeforeActivateActivity">
    <RelativeLayout
        android:id="@+id/rlheader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:text="@string/before_activating_you_app">
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rlheader"
        android:background="@color/colorGray"
        tools:ignore="MissingConstraints" />
    <RelativeLayout
        android:layout_below="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/BtHeadLabel"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/Btlabel"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/bluetooth">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtEnlabel"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"
            android:text="@string/enable"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/BtEnImg"
            android:src="@drawable/checked"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bt_en"
        android:layout_below="@+id/BtHeadLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:id="@+id/imgBT"
            android:src="@drawable/bluetooth"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/bluetooth">
        </ImageView>
        <RelativeLayout
            android:layout_toEndOf="@+id/imgBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/BtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_bt"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Btdesc"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/BtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/turn_on_bt_des"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/bt_en"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/LcHeadLabel"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/Lclabel"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/location">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LcEnlabel"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"
            android:text="@string/enable"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/LcEnImg"
            android:src="@drawable/checked"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/LcHeadLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:id="@+id/imgLc"
            android:src="@drawable/location_per"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/location">
        </ImageView>
        <RelativeLayout
            android:layout_toEndOf="@+id/imgLc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_lc"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Lcdesc"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/LcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/turn_on_lc_des"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:width="120dp"
        android:layout_margin="30dp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:textAllCaps="false"
        android:layout_height="wrap_content">

    </Button>

</RelativeLayout>