<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemList"
        android:weightSum="9">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="8"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="Name"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/mac_address"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_macaddr"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/lb_uuid"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_uuidscan"/>


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/plush"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_below="@+id/ItemList"
        android:layout_height="0.5dp"
        android:background="@color/colorBlack"/>



</RelativeLayout>